src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Country Defaults</fullName>
        <description>Support Process to modify country and language defaults</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Deleted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Active_Products__c</fullName>
        <label>Active Products</label>
        <summaryFilterItems>
            <field>Case_Product__c.productstatus__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Product__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>[Sample Value]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agent_Handoff__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to determine whether the Agent Handoff happened to Live Agent from Chatbot</description>
        <label>Agent Handoff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attachment_Errors__c</fullName>
        <description>Captures any attachment error messages on submission via the ContactUs pages. Comma separated, split and deduped by sf_emailUsExt</description>
        <inlineHelpText>Captures any attachment error messages on submission via the ContactUs pages</inlineHelpText>
        <label>Attachment Errors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorization__c</fullName>
        <label>Authorization #</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BigData_Locale_Code__c</fullName>
        <description>Short term - will hit character limit eventually.
Specific locale code required for bigdata/where to buy/sibling finder support: 
https://msdn.microsoft.com/en-ca/library/ee825488(v=cs.20).aspx</description>
        <formula>If(ISPICKVAL(Country__c, &quot;Canada&quot;) &amp;&amp; ISPICKVAL(Language__c ,&quot;France&quot;),
&quot;fr-ca&quot;,
If(ISPICKVAL(Country__c, &quot;Brazil&quot;),
&quot;pt-br&quot;,
If(ISPICKVAL(Country__c, &quot;United Kingdom&quot;),
&quot;en-gb&quot;,
&quot;en-us&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Specific locale code required for bigdata/where to buy/sibling finder support: 
https://msdn.microsoft.com/en-ca/library/ee825488(v=cs.20).aspx</inlineHelpText>
        <label>BigData Locale Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>7th Stage</fullName>
                </value>
                <value>
                    <fullName>Ace</fullName>
                </value>
                <value>
                    <fullName>Align</fullName>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Always Discreet</fullName>
                </value>
                <value>
                    <fullName>Anna Sui</fullName>
                </value>
                <value>
                    <fullName>Ariel</fullName>
                </value>
                <value>
                    <fullName>Atra</fullName>
                </value>
                <value>
                    <fullName>Aussie</fullName>
                </value>
                <value>
                    <fullName>Avril Lavigne</fullName>
                </value>
                <value>
                    <fullName>Baldessarini</fullName>
                </value>
                <value>
                    <fullName>Balsam Color</fullName>
                </value>
                <value>
                    <fullName>Basic White</fullName>
                </value>
                <value>
                    <fullName>Beautiful Collection</fullName>
                </value>
                <value>
                    <fullName>Bold</fullName>
                </value>
                <value>
                    <fullName>Born Blonde</fullName>
                </value>
                <value>
                    <fullName>Boss Skin</fullName>
                </value>
                <value>
                    <fullName>Bounce</fullName>
                </value>
                <value>
                    <fullName>Bounty</fullName>
                </value>
                <value>
                    <fullName>Braun</fullName>
                </value>
                <value>
                    <fullName>BW2</fullName>
                </value>
                <value>
                    <fullName>Camay</fullName>
                </value>
                <value>
                    <fullName>Cascade</fullName>
                </value>
                <value>
                    <fullName>Charmin</fullName>
                </value>
                <value>
                    <fullName>Cheer</fullName>
                </value>
                <value>
                    <fullName>Christina Aguilera</fullName>
                </value>
                <value>
                    <fullName>Clairol</fullName>
                </value>
                <value>
                    <fullName>Clairol Pro Crème</fullName>
                </value>
                <value>
                    <fullName>Clairol Professional Crème</fullName>
                </value>
                <value>
                    <fullName>Clairol Professional liquicolor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCM_Initial_Pull__c</fullName>
        <label>CCM Initial Pull</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSAT_Survey_Link__c</fullName>
        <description>Field is populated when case is closed</description>
        <label>CSAT Survey Link</label>
        <length>350</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CX_Advocacy_Comments_Q10__c</fullName>
        <label>CX Advocacy Comments (Q10)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CX_Agent_Score_Q1_2__c</fullName>
        <label>CX Agent Score (Q1-2)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CX_Created_By_Location__c</fullName>
        <label>CX Created By Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CX_Created_By_Name__c</fullName>
        <label>CX Created By Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CX_Did_not_receive_response__c</fullName>
        <defaultValue>false</defaultValue>
        <description>WR212 - flags if consumer did NOT receive response</description>
        <inlineHelpText>flags if consumer did NOT receive response</inlineHelpText>
        <label>CX Did not receive response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CX_EasySimple_Score_Q4__c</fullName>
        <label>CX EasySimple Score (Q4)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CX_FeelValued_Score_Q5__c</fullName>
        <label>CX FeelValued Score (Q5)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CX_Friendly_Welcoming_Score_Q1__c</fullName>
        <label>CX Friendly Welcoming Score (Q1)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CX_Last_Modified_Date__c</fullName>
        <label>CX Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CX_MetNeeds_Score_Q3__c</fullName>
        <label>CX MetNeeds Score (Q3)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CX_Net_Promoter_Score_Q9__c</fullName>
        <label>CX Net Promoter Score (Q9)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CX_Overall_Score_Q1_5__c</fullName>
        <label>CX Overall Score (Q1-5)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CX_Repurchase_Score_Q8__c</fullName>
        <label>CX Repurchase Score (Q8)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CX_Service_Comments_Q6__c</fullName>
        <label>CX Service Comments (Q6)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CX_Trust_Score_Q7__c</fullName>
        <label>CX Trust Score (Q7)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CX_UnderstandsNeeds_Score_Q2__c</fullName>
        <label>CX UnderstandsNeeds Score (Q2)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Case_Comment_Code__c</fullName>
        <label>Case Comment Code</label>
        <summaryForeignKey>Case_Comment_Code__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Case_Last_Mod_Calc_Hr__c</fullName>
        <label>Case Last Mod Calc Hr Age</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Location__c</fullName>
        <formula>TEXT(Owner:User.Location__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Products__c</fullName>
        <label>Case Products</label>
        <summaryForeignKey>Case_Product__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ChatType__c</fullName>
        <description>Field to determine chat type (Proactive, Standalone, Carehub etc) - Used for analytics only</description>
        <label>Chat Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chat_Key__c</fullName>
        <description>Field used to store the chat key during the chat cases, this would be used as the identifier to send the PII request if we lose the transcript and case context as enclosed tabs</description>
        <label>Chat Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatbot_Case_Id__c</fullName>
        <label>Chatbot Case Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatbot_HTML_Transcript__c</fullName>
        <description>Rich text area to store the Chatbot Transcript</description>
        <label>Chatbot HTML Transcript</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Chatbot_Transcript_for_Agent__c</fullName>
        <label>Chatbot Transcript for Agent</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Child_Last_Modified_Date__c</fullName>
        <description>The datetime a child of the case was updated.</description>
        <inlineHelpText>The datetime a child of the case was updated.</inlineHelpText>
        <label>Child Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <description>The datetime the case&apos;s status was first set to &quot;Closed&quot;.</description>
        <inlineHelpText>The datetime the case&apos;s status was first set to &quot;Closed&quot;.</inlineHelpText>
        <label>Initial Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closed_Fulfillment_Orders__c</fullName>
        <label>Closed Fulfillment Orders</label>
        <summaryFilterItems>
            <field>Fulfillment_Order__c.Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>Fulfillment_Order__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Consumer_Wants_Follow_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if consumer would like a follow up</description>
        <inlineHelpText>Use only if Consumer wants results of product analysis.</inlineHelpText>
        <label>Consumer Wants Follow Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consumer_declined_to_share_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to Override the need to have Contact Address information on a case of type AE or PQC.</description>
        <inlineHelpText>please check this if the Contact refuses or declines to provide Address information</inlineHelpText>
        <label>Consumer declined to share Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consumer_declined_to_share_Contact_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to Override the need to have Contact information on a case of type AE or PQC.</description>
        <inlineHelpText>please check this if the Contact refuses or declines to provide information</inlineHelpText>
        <label>Consumer declined to share Contact Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Center_Dummy__c</fullName>
        <label>Contact Center Dummy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Center__c</fullName>
        <label>Contact Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Website__c</fullName>
        <label>Contact Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_s_Email_Bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be updated with a Workflow when a contact&apos;s email bounces.</description>
        <label>Contact&apos;s Email Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Which Country is the consumer calling from?</description>
        <inlineHelpText>Please select the country where the call originated.</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Dominican Republic</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>El Salvador</fullName>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>Guatemala</fullName>
                </value>
                <value>
                    <fullName>Honduras</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Creator_Language__c</fullName>
        <label>Creator Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>Currency ISO Code. Set via CaseTrigger.sf_case_Helper.updateRegionSMO via custom setting Country_Region_SMO__c 
Jan16</description>
        <inlineHelpText>Currency ISO Code</inlineHelpText>
        <label>Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_emoticon__c</fullName>
        <formula>IF(   (TEXT( Customer_emoticon_value__c ) ==&quot;&quot;)  ,&quot;&quot; ,IMAGE( &quot;resource/pkb_mobile/imgs/&quot;+TEXT( Customer_emoticon_value__c ) +&quot;.png&quot; ,TEXT( Customer_emoticon_value__c )  ,20,20))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How the customer was feeling when he enter the support case.</inlineHelpText>
        <label>Customer emoticon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_emoticon_value__c</fullName>
        <description>Store the emoticon as a text value.</description>
        <label>Customer emoticon value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>happy</fullName>
                </value>
                <value>
                    <fullName>confused</fullName>
                </value>
                <value>
                    <fullName>annoyed</fullName>
                </value>
                <value>
                    <fullName>frustrated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <label>Direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                    <default>true</default>
                    <label>Inbound</label>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_not_send_survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not send survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Orders__c</fullName>
        <label>Fulfillment Orders</label>
        <summaryForeignKey>Fulfillment_Order__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GCR_Case_Number__c</fullName>
        <description>External ID for the Tibco integration.</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID for the Tibco integration.</inlineHelpText>
        <label>GCR Case Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GSSA_Ownership__c</fullName>
        <description>Time of ownership</description>
        <label>GSSA Ownership</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HTTP_Referrer__c</fullName>
        <description>the url that led the customer to the contact us page
text area to capture full url</description>
        <label>HTTP Referrer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>High_Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Case_Submission_By_Location__c</fullName>
        <label>Initial Case Submission By Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Case_Submission_By__c</fullName>
        <label>Initial Case Submission By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insight_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Share this Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intake_Agent_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ALM 662 - this get&apos;s checked when task subject is Intake Agent Request. This way case product will know when to show CCM Retreival Request flag on products added page</description>
        <label>Intake Agent Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integration Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language_Code__c</fullName>
        <formula>CASE(Language__c,&quot;Arabic&quot;,&quot;ar&quot;,&quot;Chinese&quot;,&quot;zh&quot;,&quot;Chinese-T&quot;,&quot;bo&quot;,&quot;Croatian&quot;,&quot;hr&quot;,&quot;Czech&quot;,&quot;cs&quot;,&quot;Danish&quot;,&quot;da&quot;,&quot;Dutch&quot;,&quot;nl&quot;,&quot;Finnish&quot;,&quot;fi&quot;,&quot;Flemish&quot;,&quot;nl&quot;,&quot;French&quot;,&quot;fr&quot;,&quot;German&quot;,&quot;de&quot;,&quot;Greek&quot;,&quot;el&quot;,&quot;Hindi&quot;,&quot;hi&quot;,&quot;Hungarian&quot;,&quot;hu&quot;,&quot;Indonesian&quot;,&quot;in&quot;,&quot;Italian&quot;,&quot;it&quot;,&quot;Japanese&quot;,&quot;ja&quot;,&quot;Korean&quot;,&quot;ko&quot;,&quot;Malay&quot;,&quot;ms&quot;,&quot;Norwegian&quot;,&quot;no&quot;,&quot;Polish&quot;,&quot;pl&quot;,&quot;Portuguese&quot;,&quot;pt&quot;,&quot;Russian&quot;,&quot;ru&quot;,&quot;Slovakian&quot;,&quot;sk&quot;,&quot;Slovenian&quot;,&quot;sl&quot;,&quot;Spanish&quot;,&quot;es&quot;,&quot;Swedish&quot;,&quot;sv&quot;,&quot;Tagalog&quot;,&quot;tl&quot;,&quot;Thai&quot;,&quot;th&quot;,&quot;Turkish&quot;,&quot;tr&quot;,&quot;Ukrainian&quot;,&quot;uk&quot;,&quot;Vietnamese&quot;,&quot;vi&quot;,&quot;Hebrew&quot;,&quot;iw&quot;,&quot;en&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Language Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Language spoken by the caller</description>
        <inlineHelpText>Please select the correct language.</inlineHelpText>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Chinese-T</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English-GB</fullName>
                </value>
                <value>
                    <fullName>English-US</fullName>
                </value>
                <value>
                    <fullName>Estonian</fullName>
                </value>
                <value>
                    <fullName>Farsi</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>Flemish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Indonesian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Kazakh</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Latvian</fullName>
                </value>
                <value>
                    <fullName>Lithuanian</fullName>
                </value>
                <value>
                    <fullName>Malay</fullName>
                </value>
                <value>
                    <fullName>Maltese</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Invoved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick/check only if consumer has retained lawyer.</description>
        <inlineHelpText>Tick/check only if consumer has retained lawyer.</inlineHelpText>
        <label>Legal Representation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Locked_from_Editing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked from Editing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lowercase_Summary__c</fullName>
        <description>Converts summary__c to lower case for auto response rules on submission via emailus page.
christopher.macduff@accenture.com. Uses 4k limit as emailus page currently enforces this.</description>
        <inlineHelpText>Converts summary__c to lower case for auto response rules</inlineHelpText>
        <label>Lowercase Summary</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loyalty_Id__c</fullName>
        <description>Field which would be stamped from the care hub when launched from other apps</description>
        <label>Loyalty Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDO__c</fullName>
        <label>MDO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>[Sample Value]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_QR_Description__c</fullName>
        <description>The number of questionnaires received. For example, 1 of 2 questionnaire received.</description>
        <inlineHelpText>The number of questionnaires received. For example, 1 of 2 questionnaire received.</inlineHelpText>
        <label>Medical QR Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_QR_Request_Date__c</fullName>
        <description>The date/time the request was started. Populated by a workflow rule.</description>
        <inlineHelpText>The date/time the request was started. Populated by a workflow rule.</inlineHelpText>
        <label>Medical QR Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Medical_QR_Status__c</fullName>
        <description>The status the Medical Questionnaire Request is in.</description>
        <inlineHelpText>The status the Medical Questionnaire Request is in.</inlineHelpText>
        <label>Medical QR Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Questionnaire Requested - Attempt 1</fullName>
                </value>
                <value>
                    <fullName>Questionnaire Requested - Attempt 2</fullName>
                </value>
                <value>
                    <fullName>Questionnaire Requested - Attempt 3</fullName>
                </value>
                <value>
                    <fullName>Questionnaire Received</fullName>
                </value>
                <value>
                    <fullName>Unwilling to Complete</fullName>
                </value>
                <value>
                    <fullName>Sent by consumer but not received</fullName>
                </value>
                <value>
                    <fullName>Unable to Re-contact Consumer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NOT_HANDLED__c</fullName>
        <label>No Topic Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>[Sample Value]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Not_Handled_Reason__c</fullName>
        <description>US620</description>
        <label>Not Handled Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hang Up; Hoax</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Misdial</fullName>
                </value>
                <value>
                    <fullName>Transferred</fullName>
                </value>
                <value>
                    <fullName>Spam</fullName>
                </value>
                <value>
                    <fullName>Auto-Response</fullName>
                </value>
                <value>
                    <fullName>Divested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Active_Adverse_Event__c</fullName>
        <label>Number of Active Adverse Event</label>
        <summaryFilterItems>
            <field>Case_Comment_Code__c.Comment_Code_Type__c</field>
            <operation>equals</operation>
            <value>Adverse Event</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Case_Comment_Code__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Comment_Code__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>